:recycle: Update description

--- a/src/assets/locales/zh-TW/translation.json
+++ b/src/assets/locales/zh-TW/translation.json
@@ -8,10 +8,7 @@
   "description": [
     "內向又自卑的人類🤢",
     "自我認同是一條牛🐮",
-    "喜歡甜食🥞",
-    "喜歡閱讀📖",
-    "喜歡寫作📝",
-    "喜歡塗鴉🎨",
+    "喜歡甜食🥞閱讀📖寫作📝塗鴉🎨",
     "專業技能包含 JavaScript / TypeScript / Python / NodeJS。"
   ],
   "share": {
